Tom it4 (#133)
* activity be done

* Acitivity Unit test

* FE
