# backend/src/requests/createactivity.input.ts
@@ -1,0 +1,6 @@
+export interface CreateActivityInput {
+  id: string;
+  name?: string;
+  victimName: string;
+  description?: string;
+}
