# backend/src/responses/api.exception.ts
@@ -23,6 +23,9 @@ export enum ErrorMessage {
   ONGOINGSPEEDTEST = 'Error generated by speedtest middleware: On going speed test, please try again later.',
   WRONGSTATUS = 'Error generated by service: Cannot find corresponding status name.',
   BADSEARCHCRITERIA = 'Error generated by service: Search criteria not follow the rule.',
+  WRONGACTIVITYNAME = 'Error generated by service: Cannot find corresponding activity name.',
+  EMPTYACTIVTYNAME = 'Error generated by service: Empty activity name.',
+  EMPTYACTIVTYDESCRIPTION = 'Error generated by service: Empty activity description.',
   NOSUCHEMERGENCYMESSAGE = 'Error generated by service: No such emergency message.',
   EXISTINGMESSAGE = 'Error generated by service: Existing unsent emergency message',
 }
